--- a/vagrant/catalog/templates/new-item.html
+++ b/vagrant/catalog/templates/new-item.html
@@ -98,16 +98,17 @@
 		    
 		    <div class="item__wrapper">
 			  <!-- form -->
-			  <form action="{{ url_for('addNewItem', categories = categories)}}" id = "new_item_form" method = 'POST'>
+			  <form action="{{ url_for('addNewItem', categories = categories)}}" id="new__item__form" method = 'POST'>
 				<ul class="form__style">
+				  <div id='name__notify'>Name can not be blank.</div>
 				  <li><label for="name">Name<abbr class="required" title="This field is mandatory"> *</abbr></label>
-				    <input type ='text' name='name' class="field__long" minlength="1" maxlength="25" required>
+				    <input type ='text' name='name' id="name" class="field__long" minlength="1" maxlength="25" required>
 				  </li>
+				  <div id='description__notify'>Description can not be blank.</div>
 				  <li>
 				    <label for="description">Description<abbr class="required" title="This field is mandatory"> *</abbr></label>
-				    <textarea name = 'description' class="field__long field__textarea" rows='5' required></textarea>
+				    <textarea name = 'description' id="description" class="field__long field__textarea" rows='5' required></textarea>
 				  </li>
-				  <!-- <div id="price__wrapper"> -->
 				    <div id='price__notify'>Price should start with a $ followed by 1-6 digits, then decimal and 2 digits. e.g. $0.99 or $9999.00</div>
 				    <li>
 				      <label for="price">Price<abbr class="required" title="This field is mandatory"> *</abbr></label>
@@ -116,10 +117,10 @@
 					    pattern="\$\d{1,6}\.\d{2}" minlength='5' maxlength='10'
 					    title="Price should start with a $ followed by 1-6 digits, then decimal and 2 digits. e.g. $0.99 or $9999.00" required>
 				    </li>
-				  <!-- </div> <!-- end of price__wrapper div -->
-				  <li>
+					<div id='category__notify'>Please select a category.</div>
+				    <li>
 				    <label for="category">Category<abbr class="required" title="This field is mandatory"> *</abbr></label>
-				    <select name = 'category_id' class="field__select" required>
+				    <select name = 'category_id' id="category" class="field__select" required>
 					  <option disabled selected value> -- select an option -- </option>
 					  {% for i in categories %}
 						<option value = '{{i.id}}'>{{i.name}}</option>
@@ -154,30 +155,89 @@
 	  
 	(function() {
 	
-	var input              = document.getElementById('price');
-	var	form               = document.getElementById('new_item_form');
-	var	elem               = document.getElementById('price__notify');
+		var	form                    = document.getElementById('new__item__form');
+		var inputName               = document.getElementById('name');
+		var	noticeName              = document.getElementById('name__notify');
+		var inputDescription        = document.getElementById('description');
+		var	noticeDescription       = document.getElementById('description__notify');
+		var inputPrice              = document.getElementById('price');
+		var	noticePrice             = document.getElementById('price__notify');
+		var inputCategory           = document.getElementById('category');
+		var	noticeCategory          = document.getElementById('category__notify');
+		
+		noticeName.style.display  = 'none';
+		noticeDescription.style.display = 'none';
+		noticePrice.style.display = 'none';
+		noticeCategory.style.display = 'none';
+		
+		inputName.addEventListener('invalid', function(event){
+			event.preventDefault();
+			if ( ! event.target.validity.valid ) {
+				noticeName.className     = 'error';
+				inputName.className      = 'invalid';
+				noticeName.style.display = 'flex';
+			}
+		});
 
-			elem.style.display = 'none';
+		inputName.addEventListener('input', function(event){
+			if ( 'flex' === noticeName.style.display ) {
+				noticeName.style.display = 'none';
+				inputName.className      = 'field__long';
+			}
+		});
+		
+		inputDescription.addEventListener('invalid', function(event){
+			event.preventDefault();
+			if ( ! event.target.validity.valid ) {
+				noticeDescription.className     = 'error';
+				inputDescription.className      = 'invalid';
+				noticeDescription.style.display = 'flex';
+			}
+		});
 
-	input.addEventListener('invalid', function(event){
-		event.preventDefault();
-		if ( ! event.target.validity.valid ) {
-			input.className    = 'invalid animated shake';
-			/* elem.textContent   = 'Price should start with a $ followed by 1-6 digits, then a decimal and 2 digits. e.g. $0.99 or $9999.00'; */
-			elem.className     = 'error';
-			elem.style.display = 'flex';
-		}
-	});
+		inputDescription.addEventListener('input', function(event){
+			if ( 'flex' === noticeDescription.style.display ) {
+				noticeDescription.style.display = 'none';
+				inputDescription.className      = 'field__long';
+			}
+		});
+		
+		inputPrice.addEventListener('invalid', function(event){
+			event.preventDefault();
+			if ( ! event.target.validity.valid ) {
+				/* inputPrice.className    = 'invalid animated shake'; */
+				/* elemPrice.textContent   = 'Price should start with a $ followed by 1-6 digits, then a decimal and 2 digits. e.g. $0.99 or $9999.00'; */
+				noticePrice.className     = 'error';
+				inputPrice.className      = 'invalid';
+				noticePrice.style.display = 'flex';
+			}
+		});
 
-	input.addEventListener('input', function(event){
-		if ( 'flex' === elem.style.display ) {
-			input.className = '';
-			elem.style.display = 'none';
-		}
-	});
+		inputPrice.addEventListener('input', function(event){
+			if ( 'flex' === noticePrice.style.display ) {
+				/* inputPrice.className = ''; */
+				noticePrice.style.display = 'none';
+				inputPrice.className      = '';
+			}
+		});
+		
+		inputCategory.addEventListener('invalid', function(event){
+			event.preventDefault();
+			if ( ! event.target.validity.valid ) {
+				noticeCategory.className     = 'error';
+				inputCategory.className      = 'invalid';
+				noticeCategory.style.display = 'flex';
+			}
+		});
 
-})();
+		inputCategory.addEventListener('input', function(event){
+			if ( 'flex' === noticeCategory.style.display ) {
+				noticeCategory.style.display = 'none';
+				inputCategory.className      = 'field__long';
+			}
+		});
+
+	})();
 	</script>
 	
   </body>
