--- a/vagrant/catalog/static/style3.css
+++ b/vagrant/catalog/static/style3.css
@@ -288,6 +288,17 @@ section {
 	color: #7090ad;
 }
 
+.login__wrapper {
+	margin: 10px;
+	padding: 10px;
+	border: 1px;
+	border-color: #7090ad;
+	border-style: solid;
+	display: flex;
+	flex-flow: column nowrap;
+	width: 100%;
+}
+
 .item__wrapper {
 	margin: 0;
 	padding: 0px 10px 5px 10px; /* top right bottom left */
@@ -466,6 +477,29 @@ a.button {
 }
 
 a.button:hover {
+	background: #02b3e4;
+}
+
+.login__button {
+	font: 15px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	background: #355575;
+    padding: 8px 15px 8px; /* top left-and-right bottom */
+    border: none;
+    color: #fff;
+	width: 30%;
+}
+
+a.login__button {
+	background: #355575;
+    color: #fff;
+	width: 30%;
+}
+
+.login__button:hover {
+	background: #02b3e4;
+}
+
+a.login__button:hover {
 	background: #02b3e4;
 }
 
