--- a/vagrant/catalog/static/style3.css
+++ b/vagrant/catalog/static/style3.css
@@ -289,13 +289,16 @@ section {
 }
 
 .login__wrapper {
-	margin: 10px;
+	margin: 5px, 10px, 2px, 5px;
 	padding: 10px;
 	border: 1px;
 	border-color: #7090ad;
 	border-style: solid;
 	display: flex;
-	flex-flow: column nowrap;
+	flex-flow: row nowrap;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
 	width: 100%;
 }
 
@@ -486,21 +489,44 @@ a.button:hover {
     padding: 8px 15px 8px; /* top left-and-right bottom */
     border: none;
     color: #fff;
-	width: 30%;
+	width: 25%;
+	margin: 10px;
+	display: flex;
+	justify-content: center;
+	align-self: center;
+	flex: 0 1 auto;
 }
 
 a.login__button {
 	background: #355575;
     color: #fff;
-	width: 30%;
+	width: 25%;
+	padding: 8px 15px 8px; /* top left-and-right bottom */
+	margin: 10px;
+	display: flex;
+	justify-content: center;
+	align-self: center;
+	flex: 0 1 auto;
 }
 
 .login__button:hover {
 	background: #02b3e4;
+	padding: 8px 15px 8px; /* top left-and-right bottom */
+	margin: 10px;
+	display: flex;
+	justify-content: center;
+	align-self: center;
+	flex: 0 1 auto;
 }
 
 a.login__button:hover {
 	background: #02b3e4;
+	padding: 8px 15px 8px; /* top left-and-right bottom */
+	margin: 10px;
+	display: flex;
+	justify-content: center;
+	align-self: center;
+	flex: 0 1 auto;
 }
 
 input.invalid {
